Add ignores, improve minor styling in toolbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -149,10 +149,9 @@ header {
   height: 100%;
   text-align: center; }
   #toolbar > .tool:hover {
-    background: #b2dcff;
+    background: #21405a;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    color: #073054; }
+    cursor: pointer; }
   #toolbar > .tool.left {
     float: left;
     margin-right: 10px; }
