--- a/static/css/sass/partials/_toolbar.scss
+++ b/static/css/sass/partials/_toolbar.scss
@@ -16,10 +16,9 @@
 		text-align: center;
 
 		&:hover {
-			background: #b2dcff;
+			background: #21405a;
 			box-shadow: 0 2px 0 rgba(0,0,0,0.25);
 			cursor: pointer;
-			color: #073054;
 		}
 
 		&.left {
