--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,13 +13,20 @@ input[type="checkbox"].css-checkbox {
     padding-left: 25px;
     height: 20px;
     display: inline-block;
-    line-height: 20px;
     background-repeat: no-repeat;
     background-position: 0 0;
-    font-size: 12px;
-    font-weight: 700;
-    vertical-align: middle;
+    vertical-align: top;
     cursor: pointer; }
+    input[type="checkbox"].css-checkbox + label.css-label + span {
+      min-height: 20px;
+      display: inline-block;
+      width: 230px;
+      font-size: 12px;
+      font-weight: 700;
+      line-height: 16px;
+      margin-bottom: 3px; }
+      #tool-legend-popover input[type="checkbox"].css-checkbox + label.css-label + span {
+        width: 195px; }
 
 .css-label {
   background-image: url(http://csscheckbox.com/checkboxes/web-two-style.png); }
@@ -104,7 +111,8 @@ header {
       height: 100%;
       right: 0;
       position: absolute;
-      width: 340px; }
+      width: 340px;
+      z-index: 1009; }
       @media only screen and (max-width: 767px) {
         .content .content-wrapper #sidebar {
           right: -340px;
@@ -152,6 +160,8 @@ header {
     background: #21405a;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
     cursor: pointer; }
+  #toolbar > .tool.active {
+    background: #52718c; }
   #toolbar > .tool.left {
     float: left;
     margin-right: 10px; }
@@ -202,6 +212,19 @@ header {
   .color-ramp-selector img:last-child {
     margin-bottom: 10px; }
 
+.find-address-container .close {
+  margin-top: -4px; }
+.find-address-container h4 {
+  margin-top: 4px; }
+
+.leaflet-control-layers.leaflet-control-layers-expanded {
+  padding: 10px 15px; }
+.leaflet-control-layers .leaflet-control-layers-separator {
+  margin: 10px -15px 8px -15px; }
+.leaflet-control-layers input[type="radio"],
+.leaflet-control-layers input[type="checkbox"] {
+  margin-right: 4px; }
+
 #sidebar .scenarios {
   padding: 10px;
   border-bottom: 1px solid #f1f2f2;
@@ -216,6 +239,9 @@ header {
   background: -ms-linear-gradient(top, #52718c, #21405a);
   background: -o-linear-gradient(top, #52718c, #21405a);
   border-radius: 6px 6px 0 0; }
+  @media only screen and (max-width: 767px) {
+    #sidebar .scenarios {
+      border-radius: 6px 0 0 0; } }
   #sidebar .scenarios > span {
     display: inline-block;
     color: white; }
@@ -311,3 +337,56 @@ header {
 .tooltip-inner {
   padding: 8px 12px;
   text-align: left; }
+
+#tool-legend-popover {
+  display: block;
+  top: 90px;
+  left: 40px;
+  bottom: 20px;
+  width: 276px; }
+  @media only screen and (max-width: 767px) {
+    #tool-legend-popover {
+      display: none; } }
+  #tool-legend-popover > .arrow {
+    left: 45px; }
+  #tool-legend-popover > .popover-content > ul {
+    overflow-x: auto;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 0;
+    top: 40px;
+    margin-top: 15px;
+    list-style: none;
+    padding: 0;
+    width: 259px; }
+    #tool-legend-popover > .popover-content > ul ul {
+      height: auto;
+      transition: height 0.5s;
+      padding: 0;
+      margin: 5px 0 15px 23px;
+      width: auto; }
+      #tool-legend-popover > .popover-content > ul ul > li {
+        font-size: 12px;
+        margin-bottom: 3px; }
+      #tool-legend-popover > .popover-content > ul ul .legend-icon {
+        width: 12px;
+        height: 12px;
+        display: inline-block;
+        background: #f1f2f2;
+        margin-right: 3px;
+        top: 2px;
+        position: relative; }
+    #tool-legend-popover > .popover-content > ul .collapsed > ul {
+      height: 0px;
+      overflow: hidden;
+      margin: 0; }
+    #tool-legend-popover > .popover-content > ul .collapsed .collapse-arrow {
+      opacity: 0.5; }
+    #tool-legend-popover > .popover-content > ul .collapse-arrow {
+      float: left;
+      margin-right: 5px;
+      margin-top: -2px;
+      font-size: 18px; }
+      #tool-legend-popover > .popover-content > ul .collapse-arrow:hover {
+        cursor: pointer;
+        opacity: 1; }
