--- a/static/css/sass/partials/_toolbar.scss
+++ b/static/css/sass/partials/_toolbar.scss
@@ -20,7 +20,9 @@
 			box-shadow: 0 2px 0 rgba(0,0,0,0.25);
 			cursor: pointer;
 		}
-
+        &.active {
+            background: #52718c;
+        }
 		&.left {
 			float: left;
 			margin-right: 10px;
@@ -102,3 +104,12 @@
 		}
 	}
 }
+.find-address-container {
+    .close {
+        margin-top: -4px;
+    }
+    h4 {
+        margin-top: 4px;
+    }
+}
+
