Cleanup and style legend, add interactivity

--- a/static/css/sass/partials/_legend.scss
+++ b/static/css/sass/partials/_legend.scss
@@ -4,7 +4,8 @@
     top: 90px;
     left: 40px;
     bottom: 20px;
-    width: 276px;
+    width: 300px;
+    max-width: 300px;
 
     &.in {
         display: block;
@@ -20,22 +21,25 @@
     
     > .popover-content {
         > ul {
-    		overflow-x: auto;
+            overflow-x: auto;
             position: absolute;
             bottom: 0;
             margin-bottom: 0;
             top: 40px;
             margin-top: 15px;
             list-style: none;
-            padding: 0;
-            width: 259px;
+            padding: 15px 15px;
+            left: 0;
+            right: 0;
+            border-top: 1px solid #F1f2f2;
     
             ul {
     			height: auto;
-    			transition: height 0.5s;
+                display: block;
     			padding: 0;
     			margin: 5px 0 15px 23px;
                 width: auto;
+                list-style: none;
     
                 > li {
                     font-size: 12px;
@@ -46,32 +50,34 @@
                     height: 12px;
                     display: inline-block;
                     background: #f1f2f2;
-                    margin-right: 3px;
+                    margin-right: 8px;
                     top: 2px;
                     position: relative;
                 }
     		}
     
     		.collapsed {
-    			> ul {
-    				height: 0px;
-    				overflow: hidden;
-    				margin: 0;
-    			}
+                display: none;
+
     			.collapse-arrow {
     				opacity: 0.5;
     			}
     		}
     		.collapse-arrow {
     			float: left;
-    			margin-right: 5px;
-    			margin-top: -2px;
-    			font-size: 18px;
+    			margin-right: 10px;
+    			margin-top: 1px;
+    			font-size: 14px;
+                opacity: 0.5;
+                width: 12px;
     
     			&:hover {
     				cursor: pointer;
     				opacity: 1;
     			}
+                &.active {
+                    opacity: 1;
+                }
     		}
         }
 	}
