--- a/static/css/main.css
+++ b/static/css/main.css
@@ -367,7 +367,8 @@ header {
   top: 90px;
   left: 40px;
   bottom: 20px;
-  width: 276px; }
+  width: 300px;
+  max-width: 300px; }
   #tool-legend-popover.in {
     display: block; }
   @media only screen and (max-width: 767px) {
@@ -383,14 +384,17 @@ header {
     top: 40px;
     margin-top: 15px;
     list-style: none;
-    padding: 0;
-    width: 259px; }
+    padding: 15px 15px;
+    left: 0;
+    right: 0;
+    border-top: 1px solid #F1f2f2; }
     #tool-legend-popover > .popover-content > ul ul {
       height: auto;
-      transition: height 0.5s;
+      display: block;
       padding: 0;
       margin: 5px 0 15px 23px;
-      width: auto; }
+      width: auto;
+      list-style: none; }
       #tool-legend-popover > .popover-content > ul ul > li {
         font-size: 12px;
         margin-bottom: 3px; }
@@ -399,20 +403,22 @@ header {
         height: 12px;
         display: inline-block;
         background: #f1f2f2;
-        margin-right: 3px;
+        margin-right: 8px;
         top: 2px;
         position: relative; }
-    #tool-legend-popover > .popover-content > ul .collapsed > ul {
-      height: 0px;
-      overflow: hidden;
-      margin: 0; }
-    #tool-legend-popover > .popover-content > ul .collapsed .collapse-arrow {
-      opacity: 0.5; }
+    #tool-legend-popover > .popover-content > ul .collapsed {
+      display: none; }
+      #tool-legend-popover > .popover-content > ul .collapsed .collapse-arrow {
+        opacity: 0.5; }
     #tool-legend-popover > .popover-content > ul .collapse-arrow {
       float: left;
-      margin-right: 5px;
-      margin-top: -2px;
-      font-size: 18px; }
+      margin-right: 10px;
+      margin-top: 1px;
+      font-size: 14px;
+      opacity: 0.5;
+      width: 12px; }
       #tool-legend-popover > .popover-content > ul .collapse-arrow:hover {
         cursor: pointer;
+        opacity: 1; }
+      #tool-legend-popover > .popover-content > ul .collapse-arrow.active {
         opacity: 1; }
