--- a/static/css/sass/modules/_checkbox.scss
+++ b/static/css/sass/modules/_checkbox.scss
@@ -1,44 +1,31 @@
-input[type="checkbox"].css-checkbox {
-	position: absolute; 
-	overflow: hidden; 
-	clip: rect(0 0 0 0); 
-	height: 1px; 
-	width: 1px; 
-	margin: -1px; 
-	padding: 0;
-	border: 0;
+@mixin checkboxes {
+	input[type='radio'],
+    input[type='checkbox'] {
+        opacity: 0;
+        float: left;
+        width: 0;
 
-	&:checked {
-		+ label.css-label {
-			background-position: 0 -20px;
-		}
-	}
-
-	+ label.css-label {
-		padding-left: 25px;
-		height: 20px; 
-		display: inline-block;
-		background-repeat: no-repeat;
-		background-position: 0 0;
-		vertical-align: top;
-		cursor: pointer;
-
-        & + span {
-            min-height: 20px;
-            display: inline-block;
-            width: 230px;
-            font-size: 12px;
-            font-weight: 700;
-            line-height: 16px;
-            margin-bottom: 3px;
-            
-            #tool-legend-popover & {
-                width: 195px;
-            }
+        & + label {
+            margin: 0;
+            clear: none;
+            padding: 0 0 0 28px;
+            height: 20px;
+            font-size: 1.3rem;
+            font-weight: 600;
+            color: #232323;
+            cursor: pointer;
+            vertical-align: top;
+            background: url(../images/off.png) left center no-repeat;
+        }
+        &.disabled + label {
+            opacity: 0.4;
+            cursor: default;
         }
 	}
-}
-
-.css-label{ 
-	background-image: url(http://csscheckbox.com/checkboxes/web-two-style.png);
+    input[type='radio']:checked + label {
+        background-image: url(../images/radio.png);
+    }
+    input[type='checkbox']:checked + label {
+        background-image: url(../images/check.png);
+    }
 }
