--- a/static/css/sass/partials/_map.scss
+++ b/static/css/sass/partials/_map.scss
@@ -50,6 +50,9 @@
             table {
                 margin: 0;
             }
+            .btn {
+                color: white;
+            }
         }
     }
 }
