--- a/static/css/main.css
+++ b/static/css/main.css
@@ -90,6 +90,51 @@ header {
             right: 0;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); } }
 
+.modal {
+  overflow: auto; }
+  .modal label.report-label {
+    clear: both;
+    font-weight: 400;
+    width: 100%; }
+    .modal label.report-label > span.label-number {
+      margin-right: 6px;
+      font-weight: 700;
+      font-size: 18px;
+      color: #5188cb; }
+  .modal .well {
+    margin-top: 10px;
+    padding: 14px; }
+    .modal .well p {
+      font-size: 12px; }
+  .modal #report-study-area-traveltime-options input[type="checkbox"],
+  .modal #report-study-area-radius-options input[type="checkbox"] {
+    margin-top: 8px; }
+  .modal #report-study-area-traveltime-options .report-study-area-traveltime-options-input,
+  .modal #report-study-area-traveltime-options .report-study-area-radius-options-input,
+  .modal #report-study-area-radius-options .report-study-area-traveltime-options-input,
+  .modal #report-study-area-radius-options .report-study-area-radius-options-input {
+    width: 60px;
+    float: left; }
+  .modal .report-type-list {
+    max-height: 200px;
+    overflow-y: auto;
+    border-radius: 6px;
+    border: 1px solid #DDD; }
+    .modal .report-type-list .list-group {
+      border: none;
+      margin: 0; }
+      .modal .report-type-list .list-group .list-group-item {
+        border-radius: 0;
+        border: none;
+        border-top: 1px solid #DDD;
+        padding: 12px 15px; }
+        .modal .report-type-list .list-group .list-group-item:first-child {
+          border: none; }
+        .modal .report-type-list .list-group .list-group-item h4 {
+          font-size: 16px; }
+        .modal .report-type-list .list-group .list-group-item p {
+          font-size: 11px; }
+
 header {
   background: #5188cb; }
   header h1 {
@@ -103,6 +148,21 @@ header {
     width: 203px;
     height: 50px;
     text-indent: -9999px; }
+  header h2 {
+    margin-left: 25px;
+    float: left;
+    margin-bottom: 4px;
+    margin-top: 7px;
+    font-size: 24px;
+    font-weight: 300;
+    color: white; }
+    header h2 small {
+      display: block;
+      font-size: 16px;
+      font-weight: 700;
+      margin-top: 2px;
+      margin-left: 1px;
+      color: #c7d9ee; }
 
 #toggle-sidebar {
   float: right;
@@ -224,6 +284,8 @@ header {
     margin: 0 -16px; }
     .leaflet-popup .leaflet-popup-content-wrapper .parcel-details-body table {
       margin: 0; }
+    .leaflet-popup .leaflet-popup-content-wrapper .parcel-details-body .btn {
+      color: white; }
 
 #sidebar input[type='radio'],
 #sidebar input[type='checkbox'] {
