--- a/static/css/main.css
+++ b/static/css/main.css
@@ -302,13 +302,20 @@ header {
     cursor: pointer;
     vertical-align: top;
     background: url(../images/radio-off.png) left center no-repeat; }
-  #sidebar input[type='radio'].disabled + label {
+  #sidebar input[type='radio']:disabled + label {
     opacity: 0.4;
     cursor: default; }
+    #sidebar input[type='radio']:disabled + label:hover {
+      background-image: url(../images/radio-off.png); }
   #sidebar input[type='radio'] + label:hover {
     background-image: url(../images/radio-hover.png); }
   #sidebar input[type='radio']:checked + label {
     background-image: url(../images/radio.png); }
+  #sidebar input[type='radio']:disabled:checked + label {
+    opacity: 0.4;
+    cursor: default; }
+    #sidebar input[type='radio']:disabled:checked + label:hover {
+      background-image: url(../images/radio.png); }
 #sidebar input[type='checkbox'] {
   opacity: 0;
   float: left;
@@ -324,12 +331,12 @@ header {
     cursor: pointer;
     vertical-align: top;
     background: url(../images/check-off.png) left center no-repeat; }
-  #sidebar input[type='checkbox'].disabled + label {
+  #sidebar input[type='checkbox']:disabled + label {
     opacity: 0.4;
     cursor: default; }
   #sidebar input[type='checkbox']:checked + label {
     background-image: url(../images/check.png); }
-#sidebar .scenarios {
+#sidebar .composite {
   padding: 15px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05);
   position: relative;
@@ -344,9 +351,9 @@ header {
   background: -o-linear-gradient(top, #52718c, #21405a);
   border-radius: 6px 6px 0 0; }
   @media only screen and (max-width: 767px) {
-    #sidebar .scenarios {
+    #sidebar .composite {
       border-radius: 6px 0 0 0; } }
-  #sidebar .scenarios:after {
+  #sidebar .composite:after {
     content: '';
     width: 0;
     height: 0;
@@ -356,18 +363,18 @@ header {
     position: absolute;
     bottom: -13px;
     left: 39px; }
-  #sidebar .scenarios > span {
+  #sidebar .composite > span {
     display: inline-block;
     color: white;
     font-weight: 700;
     font-size: 18px;
     margin-top: -3px;
     margin-left: 3px; }
-    #sidebar .scenarios > span > small {
+    #sidebar .composite > span > small {
       display: block;
       font-size: 12px;
       font-weight: 300; }
-  #sidebar .scenarios > select {
+  #sidebar .composite > select {
     display: inline-block;
     width: 235px;
     margin-left: 10px;
@@ -413,6 +420,8 @@ header {
         line-height: 14px;
         font-size: 18px;
         margin-left: 15px; }
+        #sidebar .factors .factor .slider + .count.zero {
+          opacity: 0.5; }
       #sidebar .factors .factor .slider .slider-handle {
         background: white;
         opacity: 1;
@@ -437,14 +446,23 @@ header {
   overflow-x: hidden;
   position: absolute;
   bottom: 60px;
-  top: 70px;
+  top: 0;
   width: 100%;
   right: 0;
   background-color: #dae6f4;
   transition: width 0.5s;
-  z-index: 9999; }
+  z-index: 999;
+  border-radius: 6px 6px 0 0; }
   #sidebar .all-factors.hide-panel {
     width: 0%; }
+  #sidebar .all-factors .scenarios {
+    padding: 15px;
+    border-bottom: 1px solid #b3cbe8;
+    background: white; }
+    #sidebar .all-factors .scenarios span {
+      font-weight: 700;
+      font-size: 14px;
+      color: #666; }
   #sidebar .all-factors ul {
     padding: 15px;
     list-style: none;
@@ -476,7 +494,8 @@ header {
   right: 0;
   padding: 13px;
   border-top: 1px solid #f1f2f2;
-  box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.05); }
+  box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.05);
+  z-index: 1000; }
 
 .tooltip-inner {
   padding: 8px 12px;
@@ -561,13 +580,20 @@ header {
       cursor: pointer;
       vertical-align: top;
       background: url(../images/radio-off.png) left center no-repeat; }
-    #tool-legend-popover input[type='radio'].disabled + label {
+    #tool-legend-popover input[type='radio']:disabled + label {
       opacity: 0.4;
       cursor: default; }
+      #tool-legend-popover input[type='radio']:disabled + label:hover {
+        background-image: url(../images/radio-off.png); }
     #tool-legend-popover input[type='radio'] + label:hover {
       background-image: url(../images/radio-hover.png); }
     #tool-legend-popover input[type='radio']:checked + label {
       background-image: url(../images/radio.png); }
+    #tool-legend-popover input[type='radio']:disabled:checked + label {
+      opacity: 0.4;
+      cursor: default; }
+      #tool-legend-popover input[type='radio']:disabled:checked + label:hover {
+        background-image: url(../images/radio.png); }
   #tool-legend-popover input[type='checkbox'] {
     opacity: 0;
     float: left;
@@ -583,7 +609,7 @@ header {
       cursor: pointer;
       vertical-align: top;
       background: url(../images/check-off.png) left center no-repeat; }
-    #tool-legend-popover input[type='checkbox'].disabled + label {
+    #tool-legend-popover input[type='checkbox']:disabled + label {
       opacity: 0.4;
       cursor: default; }
     #tool-legend-popover input[type='checkbox']:checked + label {
