--- a/static/css/sass/partials/_sidebar.scss
+++ b/static/css/sass/partials/_sidebar.scss
@@ -1,14 +1,14 @@
-$scenario-height : 70px;
+$composite-height : 70px;
 
 #sidebar {
     @include checkboxes;
 
-	.scenarios {
+	.composite {
 		padding: 15px;
 		box-shadow: 0 4px 4px rgba(0,0,0,.05);
 		position: relative;
 		z-index: 999;
-        height: $scenario-height;
+        height: $composite-height;
 		background-color: #52718c;
 		background: url(../img/btngroup-bg.png) repeat-x top;
 		background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#21405a), to(#52718c));
@@ -60,7 +60,7 @@ $scenario-height : 70px;
 		overflow: auto;
 		position: absolute;
 		bottom: 60px;
-		top: $scenario-height;
+		top: $composite-height;
 		left: 0;
 		right: 0;
 
@@ -108,6 +108,10 @@ $scenario-height : 70px;
 					line-height: 14px;
 					font-size: 18px;
 					margin-left: 15px;
+
+                    &.zero {
+                        opacity: 0.5;
+                    }
 				}
 
                 .slider-handle {
@@ -144,16 +148,29 @@ $scenario-height : 70px;
 		overflow-x: hidden;
 		position: absolute;
 		bottom: 60px;
-		top: $scenario-height;
+		top: 0;
 		width: 100%;
 		right: 0;
 		background-color: lighten(#5188cb, 35%);
 		transition: width 0.5s;
-        z-index: 9999;
+        z-index: 999;
+        border-radius: 6px 6px 0 0;
 
 		&.hide-panel {
 			width: 0%;
 		}
+
+        .scenarios {
+            padding: 15px;
+            border-bottom: 1px solid lighten($bg-color, 25%);
+            background: white;
+
+            span {
+                font-weight: 700;
+                font-size: 14px;
+                color: #666;
+            }
+        }
 
 		ul {
 			padding: 15px;
@@ -200,6 +217,7 @@ $scenario-height : 70px;
 		padding: 13px;
 		border-top: 1px solid #f1f2f2;
 		box-shadow: 0 -4px 4px rgba(0,0,0,.05);
+        z-index: 1000;
 	}
 }
 
