--- a/static/css/sass/modules/_checkbox.scss
+++ b/static/css/sass/modules/_checkbox.scss
@@ -8,13 +8,13 @@
             margin: 0;
             clear: none;
             padding: 0 0 0 28px;
-            height: 20px;
+            min-height: 20px;
             font-size: 1.3rem;
             font-weight: 600;
             color: #232323;
             cursor: pointer;
             vertical-align: top;
-            background: url(../images/radio-off.png) left center no-repeat;
+            background: url(../images/radio-off.png) left top no-repeat;
         }
         
         &:disabled + label {
@@ -51,13 +51,13 @@
             margin: 0;
             clear: none;
             padding: 0 0 0 28px;
-            height: 20px;
+            min-height: 20px;
             font-size: 1.3rem;
             font-weight: 600;
             color: #232323;
             cursor: pointer;
             vertical-align: top;
-            background: url(../images/check-off.png) left center no-repeat;
+            background: url(../images/check-off.png) left top no-repeat;
         }
         &:disabled + label {
             opacity: 0.4;
