--- a/static/css/sass/partials/_sidebar.scss
+++ b/static/css/sass/partials/_sidebar.scss
@@ -146,8 +146,7 @@ $composite-height : 70px;
 	}
 
 	.all-factors {
-		overflow: auto;
-		overflow-x: hidden;
+		overflow: hidden;
 		position: absolute;
 		bottom: 20px;
 		top: 20px;
@@ -183,7 +182,7 @@ $composite-height : 70px;
             }
         }
 
-		ul {
+		> ul {
 			padding: 15px;
             list-style: none;
             left: 0;
@@ -191,17 +190,41 @@ $composite-height : 70px;
             top: 85px;
             bottom: 0;
             right: 0;
+            margin: 0;
+            overflow: auto;
+
+            > li {
+                clear: both;
+                margin-bottom: 8px;
+                list-style: none;
+
+                label {
+                    font-size: 14px;
+                }
+            }
 
 			ul {
-				height: auto;
-				transition: height 0.5s;
-				padding: 0;
-				margin: 10px 0 10px 23px;
+				display: block;
+				margin: 10px 0 15px 0;
+                border-top: 1px solid #F1f2f2;
+                padding: 10px 0 10px 27px;
+                border-bottom: 1px solid #f1f2f2;
+
+                > li {
+                    list-style: none;
+                    margin-bottom: 5px;
+
+                    label {
+                        font-size: 12px;
+                        font-weight: 400;
+                        line-height: 2.0rem;
+                    }
+                }
 			}
 
 			.collapsed {
 				> ul {
-					height: 0px;
+					display: none;
 					overflow: hidden;
 					margin: 0;
 				}
@@ -211,9 +234,9 @@ $composite-height : 70px;
 			}
 			.collapse-arrow {
 				float: left;
-				margin-right: 5px;
-				margin-top: -2px;
-				font-size: 18px;
+				font-size: 12px;
+                margin-top: 2px;
+                margin-right: 15px;
 
 				&:hover {
 					cursor: pointer;
